# ai-mail

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
apps/agent/: .gitignore  README.md  package.json  pyproject.toml  ruff.toml
apps/agent/alembic/: README  env.py
apps/agent/alembic/versions/: 20260213_01_initial_schema.py  20260213_02_oauth_accounts.py  20260214_01_ai_chat_memory.py
apps/agent/app/: __init__.py  main.py
apps/agent/app/ai/: config.py  handler.py  memory_service.py  prompts.py  schemas.py  search_agent.py  tools.py  ws_chat_handler.py
apps/agent/app/auth/: routes.py  schemas.py  security.py  service.py
apps/agent/app/config/: db.py
apps/agent/app/handlers/: auth.py  health.py
apps/agent/app/mail/: __init__.py  handler.py  schemas.py  service.py
apps/agent/app/middleware/: auth.py
apps/agent/app/models/: __init__.py  ai_conversation.py  ai_conversation_message.py  oauth_account.py  refresh_token.py  user.py
apps/agent/app/routes/: ai.py  auth.py  health.py  mail.py  ws.py  ws_auth.py
apps/agent/app/utils/: constants.py  ws_security.py
apps/app/: eslint.config.mjs  next.config.ts  package.json
apps/app/src/app/: globals.css  layout.tsx  page.tsx
apps/app/src/app/app/: page.tsx
apps/app/src/components/: theme-toggle.tsx
apps/app/src/hooks/: use-ai-assistant.ts  use-mail.ts  use-websocket.ts
apps/app/src/lib/: api-client.ts
apps/app/src/providers/: auth-provider.tsx  websocket-provider.tsx
apps/app/src/services/: ai-api.ts  mail-api.ts  ws-api.ts
apps/app/src/types/: types.ts
(+38 files in other folders)
